Update home page text

--- a/sophia/templates/home.html
+++ b/sophia/templates/home.html
@@ -83,8 +83,7 @@ Sophia Hsiao Studio - Private Violin Lessons in Arlington Heights
             <div class="col-md-4 content-boxes-v6">
                 <i class="rounded-x fa fa-home"></i>
                 <h2 class="title-v3-md text-uppercase margin-bottom-10">Comfortable Environment</h2>
-                <p>We strive to provide a welcoming space for students to learn
-                  at their own pace. Violin lessons are conducted out of our home in Arlington Heights, IL. We are minutes away from Schaumburg, Mount Prospect, and Elk Grove Village.</p>
+                <p>We strive to provide a welcoming space for students to learn the violin at their own pace. Violin lessons are conducted out of our home in Arlington Heights, IL. We are minutes away from Schaumburg, Mount Prospect, and Elk Grove Village.</p>
             </div>
             <div class="col-md-4 content-boxes-v6">
                 <i class="rounded-x fa fa-music"></i>
@@ -106,7 +105,7 @@ Sophia Hsiao Studio - Private Violin Lessons in Arlington Heights
         <div class="headline-center-v2 headline-center-v2-dark margin-bottom-60">
           <h2>Recent Posts</h2>
           <span class="bordered-icon"><i class="fa fa-th-large"></i></span>
-          <p>For everything from practicing tips to news from the studio and anything in between, check out our blog!</p>
+          <p>For everything from violin practicing tips to news from the studio and anything in between, check out our blog!</p>
         </div><!--/Headline Center V2-->
 
         <div class="row">
