--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -50,9 +50,11 @@ Studio Policy | Sophia Hsiao Studio
 
     <h4><em>Private Violin Lesson Policy</em></h4>
     <ul>
+      <li>Private lessons focus on technique, music theory, and musicianship.</li>
       <li>Private violin lessons are offered weekly.</li>
-      <li>Payment is due at the first lesson of each month.</li>
-      <li>Private lessons will focus on technique, music theory, and musicianship.</li>
+      <li>Monthly tuition is due at the first lesson of each month.</li>
+      <li>I accept checks, cash, or Chase QuickPay electronic payments.</li>
+      <li>I send out email reminders for lessons, tuition, and studio announcements.</li>
       <li>I will notify the student and/or parent when the student needs to purchase new music books or accessories.</li>
     </ul>
 
@@ -73,8 +75,7 @@ Studio Policy | Sophia Hsiao Studio
 
     <h4><em>Recital Policy</em></h4>
     <ul>
-      <li>Recitals are held on a yearly basis.</li>
-      <li>The recital is for students to perform the music they have been working on.</li>
+      <li>Recitals are held twice a year in the Fall and Spring. Recitals are for students to perform the music they have been working on.</li>
       <li>Memorization of the pieces is highly encouraged but not required.</li>
       <li>Family and friends are welcome to attend.</li>
       <li>Date, time, and location will be communicated with all families at least two months in advance.</li>
