--- a/sophia/templates/philosophy.html
+++ b/sophia/templates/philosophy.html
@@ -105,7 +105,7 @@ Teaching Philosophy | Sophia Hsiao Studio
             <i class="fa fa-trophy"></i>
             <div class="service-block-desc">
               <h3>Performance</h3>
-              <p>Music is meant to be shared with others and it brings joy, beauty, and creativity into our world. Yearly studio violin recitals allow students to perform the music they have been working on and to share this experience with their friends, family, and community members.</p>
+              <p>Music is meant to be shared with others and it brings joy, beauty, and creativity into our world. Studio violin recitals twice a year allow students to perform the music they have been working on and to share this experience with their friends, family, and community members.</p>
             </div>
           </div>
         </div>
