Activate gallery link

--- a/sophia/templates/gallery.html
+++ b/sophia/templates/gallery.html
@@ -27,6 +27,14 @@ Gallery | Sophia Hsiao Studio
 
 <div class="cube-portfolio container margin-bottom-60">
     <div class="content">
+  <div class="row">
+    <div class="col-md-12 mb-margin-bottom-30">
+      <p>
+        Here is a glimpse into Sophia Hsiao Studio. You will see pictures from our weekly violin lessons, past recitals and performance classes, as well as gifts for students and recital treats. These pictures will help let you know what our studio offers.
+        <br><br>
+      </p>
+    </div>
+    </div>
         <div class="fusion-portfolio wrapper-portfolio-grid cbp-3-col">
             <div id="filters-container" class="cbp-l-filters-text content-xs">
                 |<div data-filter="*" class="cbp-filter-item-active cbp-filter-item"> All </div> |
