--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -52,7 +52,7 @@ Schedule Trial Violin Lesson | Sophia Hsiao Studio
       <div class="tag-box tag-box-v2">
         <p>Please note that the day and time for your trial violin lesson will be your official lesson time should you decide to continue lessons.</p>
       </div>
-      <p>Violin lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL and minutes away from Mount Prospect, Elk Grove Village, and Schaumburg (Refer to the map or view on <a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
+      <p>Violin lessons are conducted out of our home. Upon successful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL and minutes away from Mount Prospect, Elk Grove Village, and Schaumburg (Refer to the map or view on <a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
     </div>
     <div class="col-md-3">
       <!-- Google Map -->
