--- a/sophia/templates/base.html
+++ b/sophia/templates/base.html
@@ -91,6 +91,9 @@
                             <a href="{% url 'schedule_trial_lesson' %}">Schedule Trial Lesson</a>
                         </li>
                         <li>
+                            <a href="{% url 'gallery' %}">Gallery</a>
+                        </li>
+                        <li>
                             <a href="{% url 'blog' %}">Blog</a>
                         </li>
                         <li>
