Update bio, gallery, and policy

--- a/sophia/templates/gallery.html
+++ b/sophia/templates/gallery.html
@@ -30,7 +30,7 @@ Gallery | Sophia Hsiao Studio
   <div class="row">
     <div class="col-md-12 mb-margin-bottom-30">
       <p>
-        Here is a glimpse into Sophia Hsiao Studio. You will see pictures from our past recitals, performance classes, and weekly violin lessons as well as gifts from students and recital treats. These pictures will help give you a feel for the studio.
+        Here is a glimpse into Sophia Hsiao Studio where you will see pictures from past recitals, performance classes, and lessons. These pictures will help give you an idea of what our studio events look like.
         <br><br>
       </p>
     </div>
