--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -27,10 +27,11 @@ Studio Policy | Sophia Hsiao Studio
     <ul>
       <li>Punctual with the lesson times and will come prepared to violin lessons.</li>
       <li>Use appropriate exercises and suggestions to improve technique, musicianship, and performance.</li>
-      <li>Continue to pursue growth in teaching skills and knowledge through reading books, online resources, and attending workshops and conferences.</li>
       <li>Seek to build a relationship with each student and family knowing how crucial that is to the learning process</li>
       <li>Observe and adapt to the different way each student learns.</li>
       <li>Honestly communicate with the student (and/or parent if applicable) how the student is progressing in their violin lessons.</li>
+      <li>Send out monthly announcements email that will include things like upcoming studio events, practice tips, and lesson reminders.</li>
+      <li>Continue to pursue growth in teaching skills and knowledge through reading books, online resources, and attending workshops and conferences.</li>
     </ul>
 
 
@@ -46,39 +47,37 @@ Studio Policy | Sophia Hsiao Studio
       <li>For students ages 4-6, parents are welcome to sit in the violin lesson during the first few weeks. After this time period it is recommended that the parent sit out so that your child can learn independently and start to build a relationship with the teacher.</li>
       <li>Committed to being involved with home practice and encouraging your child to practice regularly.</li>
       <li>Responsible for renting or purchasing an instrument for their child so that one is available for violin lessons and practice</li>
+      <li>Responsible for purchasing books or accessories that are necessary for their child to learn.</li>
     </ul>
 
     <h4><em>Private Violin Lesson Policy</em></h4>
     <ul>
       <li>Private lessons focus on technique, music theory, and musicianship.</li>
-      <li>Private violin lessons are offered weekly.</li>
-      <li>Monthly tuition is due at the first lesson of each month.</li>
-      <li>I accept checks, cash, or Chase QuickPay electronic payments.</li>
-      <li>I send out email reminders for lessons, tuition, and studio announcements.</li>
-      <li>I will notify the student and/or parent when the student needs to purchase new music books or accessories.</li>
+      <li>Lesson notebooks are required for each student and cost $6. Students will use the notebook to record their practice days and be reminded on what to practice during the week.</li>
+      <li>Monthly invoices are sent out during the last week of the month and payment is due at the first lesson of the month. There is a $10 late fee if payment is not received within 7 days of the first lesson.</li>
+      <li>Checks, cash, or Chase Quick Pay electronic payments are acceptable. The student and/or parent will be notified when the student needs to purchase new music books or accessories.</li>
+      <li>The student and/or parent will be notified when the student needs to purchase new music books or accessories.</li>
+      <li>Lesson rates cover the lesson time, recital and studio fees, and resources that are required to prepare for lessons. Please contact Sophia Hsiao Studio for our current lesson rates.</li>
     </ul>
 
     <h4><em>Cancellation Policy</em></h4>
     <ul>
-      <li>Please contact me at least 24 hours prior to the scheduled lesson so that we have time to schedule a make-up lesson. </li>
-      <li>For last-minute cancellations made less than 24 hours before the scheduled lesson,  payment is required. Recognizing that emergencies do come up, enforcement of payment is up to the teacher’s discretion.</li>
-      <li>If there is an emergency preventing lesson attendance, please call or text me on my phone.</li>
-      <li>Make-up lessons will be scheduled within 1-2 weeks.</li>
-      <li>Any lessons cancelled due to the teacher’s schedule will be rescheduled as soon as possible and notice will be provided at least 24 hours in advance.</li>
+      <li>Cancellations must be made at least 24 hours prior to the scheduled lesson. Email me if you need to reschedule or cancel a lesson. Make up lessons will be offered and scheduled within 1-2 weeks.</li>
+      <li>For cancellations made less than 24 hours before the lesson, payment is required unless the student is sick or there is a last minute emergency. </li>
+      <li>Payment is required for missed lessons and that includes forgetfulness, failure to notify me that you can’t come to your lesson, or scheduling conflicts that could have been avoided.</li>
+      <li>Any lessons cancelled due to the teacher’s schedule will be rescheduled as soon as possible.</li>
     </ul>
 
     <h4><em>Termination Policy</em></h4>
     <ul>
-      <li>The teacher may terminate lessons due to poor behavior, failure to commit to practice, or failure to comply with the contents of the studio policy</li>
-      <li>If the parent and student wish to terminate lessons, they must communicate this with the teacher two weeks before the desired end date so that appropriate steps can be taken</li>
+      <li>The teacher may terminate lessons due to poor behavior, failure to commit to practice, or failure to comply with the contents of the studio policy.</li>
+      <li>If the parent and student wish to terminate lessons, they must communicate this with the teacher two weeks before the desired end date so that appropriate steps can be taken.</li>
     </ul>
 
     <h4><em>Recital Policy</em></h4>
     <ul>
-      <li>Recitals are held twice a year in the Fall and Spring. Recitals are for students to perform the music they have been working on.</li>
-      <li>Memorization of the pieces is highly encouraged but not required.</li>
-      <li>Family and friends are welcome to attend.</li>
-      <li>Date, time, and location will be communicated with all families at least two months in advance.</li>
+      <li>Recitals are held twice a year in the Fall and Spring to celebrate the hard work that students have put into lessons. Participation is optional but highly encouraged.</li>
+      <li>More information about the recitals will be announced 1-2 months in advance.</li>
     </ul>
   </div><!--/row-fluid-->
 </div><!--/container-->
