--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -44,8 +44,8 @@ Studio Policy | Sophia Hsiao Studio
 
     <h4><em>Parental commitments (if applicable)</em></h4>
     <ul>
-      <li>For students ages 4-6, parents are welcome to sit in the violin lesson during the first few weeks. After this time period it is recommended that the parent sit out so that your child can learn independently and start to build a relationship with the teacher.</li>
-      <li>Committed to being involved with home practice and encouraging your child to practice regularly.</li>
+      <li>For students ages 4-6, parents are welcome to sit in the violin lesson during the first few weeks. After this time period it is recommended that the parent sit out so that their child can learn to take responsibility for their learning and start to build a relationship with the teacher.</li>
+      <li>Committed to being involved with home practice and helping your child foster daily practice rhythms.</li>
       <li>Responsible for renting or purchasing an instrument for their child so that one is available for violin lessons and practice</li>
       <li>Responsible for purchasing books or accessories that are necessary for their child to learn.</li>
     </ul>
