Update policy again

--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -23,30 +23,30 @@ Studio Policy | Sophia Hsiao Studio
 <div class="container content">
   <div class="row-fluid">
     <p class="lead"><em>The following is what I ask my students and parents to commit to as part of our violin lessons and what I am committed to providing the student and parent.</em></p>
-    <h4><em>Teacher commitments</em></h4>
+    <h4><em>Teacher Commitments</em></h4>
     <ul>
       <li>Punctual with the lesson times and will come prepared to violin lessons.</li>
       <li>Use appropriate exercises and suggestions to improve technique, musicianship, and performance.</li>
-      <li>Seek to build a relationship with each student and family knowing how crucial that is to the learning process</li>
+      <li>Seek to build a relationship with each student and family knowing how crucial that is to the learning process.</li>
       <li>Observe and adapt to the different way each student learns.</li>
       <li>Honestly communicate with the student (and/or parent if applicable) how the student is progressing in their violin lessons.</li>
-      <li>Send out monthly announcements email that will include things like upcoming studio events, practice tips, and lesson reminders.</li>
+      <li>Send out monthly announcements about upcoming studio events, practice tips, and lesson reminders.</li>
       <li>Continue to pursue growth in teaching skills and knowledge through reading books, online resources, and attending workshops and conferences.</li>
     </ul>
 
 
-    <h4><em>Student commitments</em></h4>
+    <h4><em>Student Commitments</em></h4>
     <ul>
-      <li>Arriving on time and coming prepared to violin lessons with instrument and books</li>
-      <li>Committed to regular practice at least 5-6 days a week, as it is essential to any musical growth</li>
+      <li>Arriving on time and coming prepared to violin lessons with instrument and books.</li>
+      <li>Committed to regular practice at least 5-6 days a week, as it is essential to any musical growth.</li>
       <li>The time required for practice depends heavily on the age and ability of the student and will therefore be discussed with the student on a case by case basis.</li>
     </ul>
 
-    <h4><em>Parental commitments (if applicable)</em></h4>
+    <h4><em>Parental Commitments (if applicable)</em></h4>
     <ul>
       <li>For students ages 4-6, parents are welcome to sit in the violin lesson during the first few weeks. After this time period it is recommended that the parent sit out so that their child can learn to take responsibility for their learning and start to build a relationship with the teacher.</li>
       <li>Committed to being involved with home practice and helping your child foster daily practice rhythms.</li>
-      <li>Responsible for renting or purchasing an instrument for their child so that one is available for violin lessons and practice</li>
+      <li>Responsible for renting or purchasing an instrument for their child so that one is available for violin lessons and practice.</li>
       <li>Responsible for purchasing books or accessories that are necessary for their child to learn.</li>
     </ul>
 
@@ -55,7 +55,7 @@ Studio Policy | Sophia Hsiao Studio
       <li>Private lessons focus on technique, music theory, and musicianship.</li>
       <li>Lesson notebooks are required for each student and cost $6. Students will use the notebook to record their practice days and be reminded on what to practice during the week.</li>
       <li>Monthly invoices are sent out during the last week of the month and payment is due at the first lesson of the month. There is a $10 late fee if payment is not received within 7 days of the first lesson.</li>
-      <li>Checks, cash, or Chase Quick Pay electronic payments are acceptable. The student and/or parent will be notified when the student needs to purchase new music books or accessories.</li>
+      <li>Checks, cash, or Chase Quick Pay electronic payments are acceptable.</li>
       <li>The student and/or parent will be notified when the student needs to purchase new music books or accessories.</li>
       <li>Lesson rates cover the lesson time, recital and studio fees, and resources that are required to prepare for lessons. Please contact Sophia Hsiao Studio for our current lesson rates.</li>
     </ul>
