Replace simple captcha with recaptcha v2

--- a/sophia/templates/contact.html
+++ b/sophia/templates/contact.html
@@ -55,6 +55,15 @@ Contact Us | Sophia Hsiao Studio
       </div>
 
           <form method="post" id="sky-form3" class="sky-form sky-changes-3">
+            {% if form.non_field_errors %}
+              <div class="non-field-errors">
+                {% for error in form.non_field_errors %}
+                  <div class="alert alert-danger">
+                      {{error}}
+                  </div>
+                {% endfor %}
+              </div>
+            {% endif %}
             {% csrf_token %}
             <fieldset>
               <div class="row">
@@ -111,15 +120,9 @@ Contact Us | Sophia Hsiao Studio
               </section>
 
               <section>
-                <label class="label">Enter characters below:</label>
-                <label class="input input-captcha">
-                  {{form.captcha}}
-                </label>
-                {% if form.captcha.errors %}
-                  {% for error in form.captcha.errors %}
-                    <em for="captcha" class="alert-danger">{{error}}</em>
-                  {% endfor %}
-                {% endif %}
+                <script src='https://www.google.com/recaptcha/api.js'></script>
+                <div class="g-recaptcha" data-sitekey="{{recaptcha_site_key}}">
+                </div>
               </section>
 
               <section>
