--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -30,7 +30,6 @@ Studio Policy | Sophia Hsiao Studio
       <li>Seek to build a relationship with each student and family knowing how crucial that is to the learning process.</li>
       <li>Observe and adapt to the different way each student learns.</li>
       <li>Honestly communicate with the student (and/or parent if applicable) how the student is progressing in their violin lessons.</li>
-      <li>Send out monthly announcements about upcoming studio events, practice tips, and lesson reminders.</li>
       <li>Continue to pursue growth in teaching skills and knowledge through reading books, online resources, and attending workshops and conferences.</li>
     </ul>
 
@@ -38,7 +37,7 @@ Studio Policy | Sophia Hsiao Studio
     <h4><em>Student Commitments</em></h4>
     <ul>
       <li>Arriving on time and coming prepared to violin lessons with instrument and books.</li>
-      <li>Committed to regular practice at least 5-6 days a week, as it is essential to any musical growth.</li>
+      <li>Committed to regular practice at least 5-7 days a week, as it is essential to any musical growth.</li>
       <li>The time required for practice depends heavily on the age and ability of the student and will therefore be discussed with the student on a case by case basis.</li>
     </ul>
 
@@ -53,16 +52,16 @@ Studio Policy | Sophia Hsiao Studio
     <h4><em>Private Violin Lesson Policy</em></h4>
     <ul>
       <li>Private lessons focus on technique, music theory, and musicianship.</li>
-      <li>Lesson notebooks are required for each student and cost $6. Students will use the notebook to record their practice days and be reminded on what to practice during the week.</li>
-      <li>Monthly invoices are sent out during the last week of the month and payment is due at the first lesson of the month. There is a $10 late fee if payment is not received within 7 days of the first lesson.</li>
-      <li>Checks, cash, or Chase Quick Pay electronic payments are acceptable.</li>
+      <li>Lesson notebooks are required for each student and cost $6. Students will use the notebook to write down what they should be practicing during the week.</li>
+      <li>Monthly invoices are due by the first lesson of the month. There is a $10 late fee if payment is not received within 7 days of the first lesson.</li>
+      <li>Checks or Chase Quick Pay electronic payments are acceptable.</li>
       <li>The student and/or parent will be notified when the student needs to purchase new music books or accessories.</li>
       <li>Lesson rates cover the lesson time, recital and studio fees, and resources that are required to prepare for lessons. Please contact Sophia Hsiao Studio for our current lesson rates.</li>
     </ul>
 
     <h4><em>Cancellation Policy</em></h4>
     <ul>
-      <li>Cancellations must be made at least 24 hours prior to the scheduled lesson. Email me if you need to reschedule or cancel a lesson. Make up lessons will be offered and scheduled within 1-2 weeks.</li>
+      <li>Cancellations must be made at least 24 hours prior to the scheduled lesson. Make up lessons will be offered and scheduled within 1-2 weeks.</li>
       <li>For cancellations made less than 24 hours before the lesson, payment is required unless the student is sick or there is a last minute emergency. </li>
       <li>Payment is required for missed lessons and that includes forgetfulness, failure to notify me that you can’t come to your lesson, or scheduling conflicts that could have been avoided.</li>
       <li>Any lessons cancelled due to the teacher’s schedule will be rescheduled as soon as possible.</li>
@@ -76,7 +75,7 @@ Studio Policy | Sophia Hsiao Studio
 
     <h4><em>Recital Policy</em></h4>
     <ul>
-      <li>Recitals are held twice a year in the Fall and Spring to celebrate the hard work that students have put into lessons. Participation is optional but highly encouraged.</li>
+      <li>Recitals are held twice a year in the Fall and Spring to celebrate the hard work that students have put into lessons. Participation is expected in order to get the full experience of learning and performing music.</li>
       <li>More information about the recitals will be announced 1-2 months in advance.</li>
     </ul>
   </div><!--/row-fluid-->
