--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -56,7 +56,7 @@ Studio Policy | Sophia Hsiao Studio
       <li>Monthly invoices are due by the first lesson of the month. There is a $10 late fee if payment is not received within 7 days of the first lesson.</li>
       <li>Checks or Chase Quick Pay electronic payments are acceptable.</li>
       <li>The student and/or parent will be notified when the student needs to purchase new music books or accessories.</li>
-      <li>Lesson rates cover the lesson time, recital and studio fees, and resources that are required to prepare for lessons. Please contact Sophia Hsiao Studio for our current lesson rates.</li>
+      <li>Lesson rates cover the lesson time, teaching materials, recital fees, and studio fees. Please contact Sophia Hsiao Studio for our current lesson rates.</li>
     </ul>
 
     <h4><em>Cancellation Policy</em></h4>
